syntax = "proto3";

package route;

option go_package = "./proto";

message UserStatChange {
  string sid = 1;
  uint32 uid = 2;
  enum Stat {
    Offline = 0;
    Online = 1;
  }
  Stat stat = 3;
}